--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,31 @@ body {
   background-color: black;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  overflow: hidden;
 }
 
 .container {
-  position: absolute;
-  margin-top: 80px;
-  left: 500px;
+  position: relative;
+  animation: roll 5s 0s 1 forwards;
+  margin-top: 60px;
   background-color: #c4ebe8;
   width: 1000px;
-  height: 800px;
+  height: 80%;
   border-radius: 20px;
   background-image: linear-gradient(to right bottom, #18a35d, #2626c4);
 }
 .container i {
   margin: 20px;
   font-size: 2em;
+  transition: 1s;
+  transition-property: color;
+}
+.container i:hover {
+  color: #fff;
+  cursor: pointer;
 }
 .container-music {
   display: flex;
@@ -26,27 +36,50 @@ body {
   position: relative;
   bottom: 30px;
   left: 500px;
-  background-color: #8b8989;
+  background-color: rgba(255, 255, 255, 0.2);
   width: 400px;
   height: 700px;
   border-radius: 20px;
   padding: 20px;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+@keyframes roll {
+  from {
+    right: -1000px;
+  }
+  to {
+    right: 0px;
+  }
 }
 .container-menu {
-  background-color: rgba(73, 23, 23, 0.986);
+  position: relative;
+  animation: roll 3s 0s 1 forwards;
+  transition: 2s ease-in;
+  background-color: rgba(252, 245, 245, 0.322);
   width: 350px;
   height: 70px;
-  border-radius: 1git commit -m "meu primeiro commit" 0px;
-  background-image: linear-gradient(to right bottom, #18a35d, #2626c4);
+  border-radius: 10px;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-image: linear-gradient(to right bottom, rgba(254, 255, 254, 0.281), rgba(250, 250, 255, 0));
   padding: 3px;
 }
 .container-menu i {
   margin-top: 20px;
   margin-left: 40px;
   font-size: 1.7em;
+  transition: 600ms;
+  transition-property: color;
 }
 .container-menu i:hover {
-  color: #fff;
+  color: white;
   cursor: pointer;
 }
 .container-photo {
@@ -54,6 +87,20 @@ body {
   width: 350px;
   height: 350px;
   border-radius: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.photo {
+  max-width: 350px;
+  height: 350px;
+  border-radius: 10px;
+  border: 3px solid #fff;
+}
+
+.texts {
+  font-family: verdana, arial, helvetica;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
